<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_fragment_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textAlignment="center"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_red"
                app:layout_constraintTop_toBottomOf="@+id/tv_fragment_first" />

            <Button
                android:id="@+id/button_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_orange"
                app:layout_constraintTop_toBottomOf="@+id/button_red" />

            <Button
                android:id="@+id/button_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_yellow"
                app:layout_constraintTop_toBottomOf="@+id/button_orange" />

            <Button
                android:id="@+id/button_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_green"
                app:layout_constraintTop_toBottomOf="@+id/button_yellow" />

            <Button
                android:id="@+id/button_blue_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_blue_light"
                app:layout_constraintTop_toBottomOf="@+id/button_green" />

            <Button
                android:id="@+id/button_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_blue_dark"
                app:layout_constraintTop_toBottomOf="@+id/button_blue_light" />

            <Button
                android:id="@+id/button_violet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_violet"
                app:layout_constraintTop_toBottomOf="@+id/button_blue_dark" />

            <Button
                android:id="@+id/button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_white"
                app:layout_constraintTop_toBottomOf="@+id/button_violet" />

            <Button
                android:id="@+id/button_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_grey"
                app:layout_constraintTop_toBottomOf="@+id/button_white" />

            <Button
                android:id="@+id/button_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="8dp"
                android:text="@string/button_black"
                app:layout_constraintTop_toBottomOf="@+id/button_grey" />

</androidx.constraintlayout.widget.ConstraintLayout>