<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_second"
    >

    <TextView
        android:id="@+id/tv_fragment_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment"
        android:textAlignment="center"
        android:textColor="#A16161"
        android:textSize="32dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textAlignment="center"
        android:textColor="#A16161"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment_second"
        />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment_second" />

</androidx.constraintlayout.widget.ConstraintLayout>